add the read button functionality

--- a/style.css
+++ b/style.css
@@ -67,3 +67,15 @@ form{
 input, label, #btn-div button{
     flex: 1;
 }
+
+.read{
+    background-color: green;
+}
+
+.not-read{
+    background-color: orange;
+}
+
+#delete{
+    background-color: red;
+}
